--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Betel Addisu <abelberhanu6@gmail.com>
-Eyasu Alemu <@gmail.com>
+Eyasu Alemu <iyasuayenekulu3@gmail.com>
